  amount of white space and moves the caret there (Rudi Widmann).

}}}
{{{ Rectangular Selection

- Edit->More Selection->Rectangular Selection (A+\) enables rectangular
  selection mode:

  - Dragging with the mouse or using keyboard selection commands creates
    rectangular selections.

  - A status bar indicator has been added for this mode.

  - Control-dragging and Control-Shift-clicking to create rectangular
    selections is no longer supported.

- Changed vertical paste behavior. Now if the rectangle we are inserting
  into has more lines than the pasted text, the pasted text cycles
  through the rectangle. Previously, it would be inserted at the top
  with the remaining lines blank. The new behavior is very convinient;
  for example, you can select a zero-width rectangle and paste "final"
  to mark a set of variables in Java source as being final.

- Entering text while a zero-width rectangular selection is active now
  shifts the selection horizontally.

}}}
{{{ Syntax Highlighting

- A new default color scheme.

- Added a few more token types: COMMENT3, COMMENT4, LITERAL3, LITERAL4,
  KEYWORD4.

- AT_LINE_START, AT_WORD_START and AT_WHITESPACE_END attributes can now
  be set independently for BEGIN and END tags of a SPAN.

- The default background color of a token is now the background color of
  the current ruleset's default token type. It now only defaults to the
  text area background if the ruleset's default token type does not have
  a background color. This matters because for example if COMMENT2 has a
  background but MARKUP does not, HTML markup in Javadocs now has the
  same background as the rest of the comment.

- Any groups matched by a SPAN_REGEXP's BEGIN sequence are substituted
  into any positional parameters in the END sequence. This allows
  read-ins to be properly handled in languages like Shell Script, PHP,
  and Perl.

- Added NO_ESCAPE attribute to SPAN and SPAN_REGEXP rules. This allows